<?xml version="1.0" encoding="utf-8"?><!--:::::::::::::::::::::::::::::::::::::::::::::::::
  : Copyright 2018 Andre Silva. All rights reserved.:
  : Contact: mateussa@uni.coventry.ac.uk            :
  :                                                 :
  : Check my work at,                               :
  : https://github.coventry.ac.uk/mateussa          :
  : https://andrefmsilva.coventry.domains           :
  :                                                 :
  : fragment_news.xml                               :
  : Last modified 06 Dec 2018                       :
  :::::::::::::::::::::::::::::::::::::::::::::::::-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutAnimation="@anim/layout_slide_bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/news_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layoutAnimation="@anim/layout_slide_bottom"
            android:orientation="vertical"
            app:reverseLayout="false" />

        <android.support.design.widget.TabLayout
            android:id="@+id/news_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            app:elevation="8dp"
            app:tabIconTint="@color/colorPrimary"
            app:tabIndicator="@color/colorAccent"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabIndicatorGravity="top"
            app:tabIndicatorHeight="1dp"
            app:tabInlineLabel="true"
            app:tabRippleColor="@color/colorAccent"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabTextAppearance="@style/TextAppearance.AppCompat.Caption"
            app:tabTextColor="@color/colorPrimary"
            app:tabUnboundedRipple="true">

            <android.support.design.widget.TabItem
                android:id="@+id/news_tab_moodle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_moodle"
                android:text="@string/news_tab_moodle" />

            <android.support.design.widget.TabItem
                android:id="@+id/news_tab_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_twitter"
                android:text="@string/news_tab_twitter" />

            <android.support.design.widget.TabItem
                android:id="@+id/news_tab_faculty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_faculty"
                android:text="@string/news_tab_faculty" />

        </android.support.design.widget.TabLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/news_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent"
        android:progressTint="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>

