<?xml version="1.0" encoding="utf-8"?><!--:::::::::::::::::::::::::::::::::::::::::::::::::
  : Copyright 2018 Andre Silva. All rights reserved.:
  : Contact: mateussa@uni.coventry.ac.uk            :
  :                                                 :
  : Check my work at,                               :
  : https://github.coventry.ac.uk/mateussa          :
  : https://andrefmsilva.coventry.domains           :
  :                                                 :
  : drawer_menu.xml                                 :
  : Last modified 06 Dec 2018                       :
  :::::::::::::::::::::::::::::::::::::::::::::::::-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_timetable"
            android:enabled="false"
            android:icon="@drawable/ic_timetable"
            android:title="@string/nav_timetable" />
        <item
            android:id="@+id/nav_library"
            android:enabled="false"
            android:icon="@drawable/ic_library"
            android:title="@string/nav_library" />
    </group>

    <group
        android:id="@+id/dummy_id"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>

</menu>